--- a/apps/demo-app/base/service.yaml
+++ b/apps/demo-app/base/service.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: demo-app
+  namespace: prod
 spec:
-  type: ClusterIP
   selector:
     app: demo-app
   ports:
