--- a/clusters/prod/kustomization.yaml
+++ b/clusters/prod/kustomization.yaml
@@ -4,6 +4,6 @@ resources:
   - namespace.yaml
   - git-source.yaml
   - flux-system/gotk-components.yaml
-  - ../../infrastructure/ingress/aws-alb
+  - ../infrastructure/ingress/aws-alb
   - ../../apps/demo-app/overlays/prod
 
